[release/v0.4-201309]Fix .sg-rule-create-done-wrap style

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -5092,7 +5092,7 @@ a.action-link:hover {
 
 .sg-rule-create-done-wrap {
 	display  : none;
-	height   : 400px;
+	height   : 360px;
 	position : relative;
 }
 
